deploy/kafka/kafka-bridge-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: transaction-bridge-http
  labels:
    app-owner: fsi-fraud-detection-kafka
  #namespace: fsi-fraud-detection
spec:
  to:
    kind: Service
    name: transaction-bridge-bridge-service
    weight: 100
  port:
    targetPort: rest-api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
